added first basic Editor container highlight support
- added support for Hero element
- added support for first basic page wrapper elements

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,10 @@ body {
 	color: var(--foreground);
 	background: var(--background);
 }
+
+body[data-editor-mode="true"] .editor-highlight {
+	/* Alle diese Stile sind Tailwind-Klassen */
+	border-color: var(--editor-border-color);
+	/* Alle diese Stile sind Tailwind-Klassen */
+	@apply border-2 border-dashed rounded-lg relative;
+}
